<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_specifications"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_Product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- supplier field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_Product_suppliername"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_data"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- qantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_Product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- show pieces -->
            <TextView
                android:id="@+id/label_orderedProd_units"
                android:text="@string/unit_ordered_product"
                style="@style/EditorUnitsStyle" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_blank"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_Product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_blank"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- phonenenumber field -->
            <EditText
                android:id="@+id/edit_supplier_phonenumber"
                android:hint="@string/hint_Product_supplphonenr"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
